DLP_AMPL (con switch)/bin/parser/y.output
   0  $accept : program $end

   1  program : _program main

   2  _program :
   3           | _program variable_definition
   4           | _program function_definition

   5  $$1 :

   6  main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body '}'

   7  variable_definition : variables ':' type ';'

   8  variables : ID
   9            | variables ',' ID

  10  $$2 :

  11  function_definition : DEF $$2 ID '(' parameters ')' ':' return_type '{' function_body '}'

  12  parameters :
  13             | _parameters

  14  _parameters : parameter
  15              | _parameters ',' parameter

  16  parameter : ID ':' simple_type

  17  return_type : simple_type
  18              | VOID

  19  function_body :
  20                | variable_definitions statements
  21                | variable_definitions
  22                | statements

  23  variable_definitions : variable_definition
  24                       | variable_definitions variable_definition

  25  statements : statement
  26             | statements statement

  27  statement : statement_without_semicolon ';'
  28            | while
  29            | for
  30            | if

  31  statement_without_semicolon : assignment_as_expression
  32                              | function_call_as_expression
  33                              | return
  34                              | read
  35                              | write
  36                              | plus_equal
  37                              | minus_equal
  38                              | mul_equal
  39                              | div_equal
  40                              | mod_equal
  41                              | pre_plus_plus_as_expression
  42                              | pre_minus_minus_as_expression
  43                              | post_plus_plus_as_expression
  44                              | post_minus_minus_as_expression
  45                              | do_while
  46                              | break

  47  type : simple_type
  48       | array
  49       | struct

  50  simple_type : INT
  51              | DOUBLE
  52              | CHAR

  53  array : '[' INT_CONSTANT ']' type

  54  struct : STRUCT '{' struct_body '}'

  55  struct_body : variable_definition
  56              | struct_body variable_definition

  57  read : INPUT expressions

  58  $$3 :

  59  write : PRINT $$3 expressions

  60  $$4 :

  61  write : PRINTLN $$4 expressions

  62  expressions : expression
  63              | expressions ',' expression

  64  while : WHILE expression ':' '{' statements '}'
  65        | WHILE expression ':' statement

  66  do_while : DO ':' '{' statements '}' WHILE expression
  67           | DO ':' statement WHILE expression

  68  for : FOR '(' for_parenthesis_body ')' ':' '{' statements '}'
  69      | FOR '(' for_parenthesis_body ')' ':' statement

  70  for_parenthesis_body : statement_without_semicolon_1mcs ';' expression ';' statement_without_semicolon_1mcs

  71  statement_without_semicolon_1mcs : statement_without_semicolon
  72                                   | statement_without_semicolon_1mcs ',' statement_without_semicolon

  73  if : IF expression ':' '{' statements '}'
  74     | IF expression ':' '{' statements '}' ELSE '{' statements '}'
  75     | IF expression ':' '{' statements '}' ELSE statement
  76     | IF expression ':' statement
  77     | IF expression ':' statement ELSE '{' statements '}'
  78     | IF expression ':' statement ELSE statement

  79  $$5 :

  80  return : RETURN $$5 expression

  81  plus_equal : expression PLUS_EQUAL expression

  82  minus_equal : expression MINUS_EQUAL expression

  83  mul_equal : expression MUL_EQUAL expression

  84  div_equal : expression DIV_EQUAL expression

  85  mod_equal : expression MOD_EQUAL expression

  86  break : BREAK

  87  expression : expression AND expression
  88             | expression OR expression
  89             | xor_expression
  90             | expression '>' expression
  91             | expression GREATER_OR_EQUAL expression
  92             | expression '<' expression
  93             | expression LESS_OR_EQUAL expression
  94             | expression DISTINCT expression
  95             | expression EQUALS expression
  96             | expression '+' expression
  97             | expression '-' expression
  98             | expression '*' expression
  99             | expression '/' expression
 100             | expression '%' expression
 101             | '!' expression
 102             | '-' expression
 103             | '(' simple_type ')' expression
 104             | expression '.' ID
 105             | expression '[' expression ']'
 106             | '(' expression ')'
 107             | function_call_as_expression
 108             | INT_CONSTANT
 109             | REAL_CONSTANT
 110             | CHAR_CONSTANT
 111             | ID
 112             | pre_plus_plus_as_expression
 113             | pre_minus_minus_as_expression
 114             | post_plus_plus_as_expression
 115             | post_minus_minus_as_expression
 116             | ternaryOperator
 117             | assignment_as_expression

 118  function_call_as_expression : ID '(' parameters_in_function_call ')'

 119  parameters_in_function_call :
 120                              | expressions

 121  pre_plus_plus_as_expression : PLUS_PLUS expression

 122  pre_minus_minus_as_expression : MINUS_MINUS expression

 123  post_plus_plus_as_expression : expression PLUS_PLUS

 124  post_minus_minus_as_expression : expression MINUS_MINUS

 125  ternaryOperator : expression '?' expression ':' expression

 126  assignment_as_expression : expression '=' expression

 127  xor_expression : expression XOR expression

state 0
	$accept : . program $end  (0)
	_program : .  (2)

	.  reduce 2

	program  goto 1
	_program  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : _program . main  (1)
	_program : _program . variable_definition  (3)
	_program : _program . function_definition  (4)

	DEF  shift 3
	ID  shift 4
	.  error

	main  goto 5
	variable_definition  goto 6
	function_definition  goto 7
	variables  goto 8


state 3
	main : DEF . $$1 MAIN '(' ')' ':' VOID '{' function_body '}'  (6)
	function_definition : DEF . $$2 ID '(' parameters ')' ':' return_type '{' function_body '}'  (11)
	$$1 : .  (5)
	$$2 : .  (10)

	ID  reduce 10
	MAIN  reduce 5

	$$1  goto 9
	$$2  goto 10


state 4
	variables : ID .  (8)

	.  reduce 8


state 5
	program : _program main .  (1)

	.  reduce 1


state 6
	_program : _program variable_definition .  (3)

	.  reduce 3


state 7
	_program : _program function_definition .  (4)

	.  reduce 4


state 8
	variable_definition : variables . ':' type ';'  (7)
	variables : variables . ',' ID  (9)

	','  shift 11
	':'  shift 12
	.  error


state 9
	main : DEF $$1 . MAIN '(' ')' ':' VOID '{' function_body '}'  (6)

	MAIN  shift 13
	.  error


state 10
	function_definition : DEF $$2 . ID '(' parameters ')' ':' return_type '{' function_body '}'  (11)

	ID  shift 14
	.  error


state 11
	variables : variables ',' . ID  (9)

	ID  shift 15
	.  error


state 12
	variable_definition : variables ':' . type ';'  (7)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	type  goto 21
	simple_type  goto 22
	array  goto 23
	struct  goto 24


state 13
	main : DEF $$1 MAIN . '(' ')' ':' VOID '{' function_body '}'  (6)

	'('  shift 25
	.  error


state 14
	function_definition : DEF $$2 ID . '(' parameters ')' ':' return_type '{' function_body '}'  (11)

	'('  shift 26
	.  error


state 15
	variables : variables ',' ID .  (9)

	.  reduce 9


state 16
	simple_type : INT .  (50)

	.  reduce 50


state 17
	simple_type : DOUBLE .  (51)

	.  reduce 51


state 18
	simple_type : CHAR .  (52)

	.  reduce 52


state 19
	struct : STRUCT . '{' struct_body '}'  (54)

	'{'  shift 27
	.  error


state 20
	array : '[' . INT_CONSTANT ']' type  (53)

	INT_CONSTANT  shift 28
	.  error


state 21
	variable_definition : variables ':' type . ';'  (7)

	';'  shift 29
	.  error


state 22
	type : simple_type .  (47)

	.  reduce 47


state 23
	type : array .  (48)

	.  reduce 48


state 24
	type : struct .  (49)

	.  reduce 49


state 25
	main : DEF $$1 MAIN '(' . ')' ':' VOID '{' function_body '}'  (6)

	')'  shift 30
	.  error


state 26
	function_definition : DEF $$2 ID '(' . parameters ')' ':' return_type '{' function_body '}'  (11)
	parameters : .  (12)

	ID  shift 31
	')'  reduce 12

	parameters  goto 32
	_parameters  goto 33
	parameter  goto 34


state 27
	struct : STRUCT '{' . struct_body '}'  (54)

	ID  shift 4
	.  error

	variable_definition  goto 35
	variables  goto 8
	struct_body  goto 36


state 28
	array : '[' INT_CONSTANT . ']' type  (53)

	']'  shift 37
	.  error


state 29
	variable_definition : variables ':' type ';' .  (7)

	.  reduce 7


state 30
	main : DEF $$1 MAIN '(' ')' . ':' VOID '{' function_body '}'  (6)

	':'  shift 38
	.  error


state 31
	parameter : ID . ':' simple_type  (16)

	':'  shift 39
	.  error


state 32
	function_definition : DEF $$2 ID '(' parameters . ')' ':' return_type '{' function_body '}'  (11)

	')'  shift 40
	.  error


state 33
	parameters : _parameters .  (13)
	_parameters : _parameters . ',' parameter  (15)

	','  shift 41
	')'  reduce 13


state 34
	_parameters : parameter .  (14)

	.  reduce 14


state 35
	struct_body : variable_definition .  (55)

	.  reduce 55


state 36
	struct : STRUCT '{' struct_body . '}'  (54)
	struct_body : struct_body . variable_definition  (56)

	ID  shift 4
	'}'  shift 42
	.  error

	variable_definition  goto 43
	variables  goto 8


state 37
	array : '[' INT_CONSTANT ']' . type  (53)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	type  goto 44
	simple_type  goto 22
	array  goto 23
	struct  goto 24


state 38
	main : DEF $$1 MAIN '(' ')' ':' . VOID '{' function_body '}'  (6)

	VOID  shift 45
	.  error


state 39
	parameter : ID ':' . simple_type  (16)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	.  error

	simple_type  goto 46


state 40
	function_definition : DEF $$2 ID '(' parameters ')' . ':' return_type '{' function_body '}'  (11)

	':'  shift 47
	.  error


state 41
	_parameters : _parameters ',' . parameter  (15)

	ID  shift 31
	.  error

	parameter  goto 48


state 42
	struct : STRUCT '{' struct_body '}' .  (54)

	.  reduce 54


state 43
	struct_body : struct_body variable_definition .  (56)

	.  reduce 56


state 44
	array : '[' INT_CONSTANT ']' type .  (53)

	.  reduce 53


state 45
	main : DEF $$1 MAIN '(' ')' ':' VOID . '{' function_body '}'  (6)

	'{'  shift 49
	.  error


state 46
	parameter : ID ':' simple_type .  (16)

	.  reduce 16


state 47
	function_definition : DEF $$2 ID '(' parameters ')' ':' . return_type '{' function_body '}'  (11)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	VOID  shift 50
	.  error

	return_type  goto 51
	simple_type  goto 52


state 48
	_parameters : _parameters ',' parameter .  (15)

	.  reduce 15


state 49
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' . function_body '}'  (6)
	function_body : .  (19)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 62
	DO  shift 63
	FOR  shift 64
	BREAK  shift 65
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	'}'  reduce 19

	variable_definition  goto 71
	function_body  goto 72
	variables  goto 8
	variable_definitions  goto 73
	statements  goto 74
	statement  goto 75
	statement_without_semicolon  goto 76
	while  goto 77
	for  goto 78
	if  goto 79
	assignment_as_expression  goto 80
	function_call_as_expression  goto 81
	return  goto 82
	read  goto 83
	write  goto 84
	plus_equal  goto 85
	minus_equal  goto 86
	mul_equal  goto 87
	div_equal  goto 88
	mod_equal  goto 89
	pre_plus_plus_as_expression  goto 90
	pre_minus_minus_as_expression  goto 91
	post_plus_plus_as_expression  goto 92
	post_minus_minus_as_expression  goto 93
	do_while  goto 94
	break  goto 95
	expression  goto 96
	xor_expression  goto 97
	ternaryOperator  goto 98


state 50
	return_type : VOID .  (18)

	.  reduce 18


state 51
	function_definition : DEF $$2 ID '(' parameters ')' ':' return_type . '{' function_body '}'  (11)

	'{'  shift 99
	.  error


state 52
	return_type : simple_type .  (17)

	.  reduce 17


state 53
	expression : INT_CONSTANT .  (108)

	.  reduce 108


state 54
	expression : REAL_CONSTANT .  (109)

	.  reduce 109


state 55
	expression : CHAR_CONSTANT .  (110)

	.  reduce 110


state 56
	read : INPUT . expressions  (57)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 100
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	.  error

	assignment_as_expression  goto 101
	function_call_as_expression  goto 102
	pre_plus_plus_as_expression  goto 103
	pre_minus_minus_as_expression  goto 104
	post_plus_plus_as_expression  goto 105
	post_minus_minus_as_expression  goto 106
	expressions  goto 107
	expression  goto 108
	xor_expression  goto 97
	ternaryOperator  goto 98


state 57
	write : PRINT . $$3 expressions  (59)
	$$3 : .  (58)

	.  reduce 58

	$$3  goto 109


state 58
	write : PRINTLN . $$4 expressions  (61)
	$$4 : .  (60)

	.  reduce 60

	$$4  goto 110


state 59
	while : WHILE . expression ':' '{' statements '}'  (64)
	while : WHILE . expression ':' statement  (65)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 100
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	.  error

	assignment_as_expression  goto 101
	function_call_as_expression  goto 102
	pre_plus_plus_as_expression  goto 103
	pre_minus_minus_as_expression  goto 104
	post_plus_plus_as_expression  goto 105
	post_minus_minus_as_expression  goto 106
	expression  goto 111
	xor_expression  goto 97
	ternaryOperator  goto 98


state 60
	if : IF . expression ':' '{' statements '}'  (73)
	if : IF . expression ':' '{' statements '}' ELSE '{' statements '}'  (74)
	if : IF . expression ':' '{' statements '}' ELSE statement  (75)
	if : IF . expression ':' statement  (76)
	if : IF . expression ':' statement ELSE '{' statements '}'  (77)
	if : IF . expression ':' statement ELSE statement  (78)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 100
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	.  error

	assignment_as_expression  goto 101
	function_call_as_expression  goto 102
	pre_plus_plus_as_expression  goto 103
	pre_minus_minus_as_expression  goto 104
	post_plus_plus_as_expression  goto 105
	post_minus_minus_as_expression  goto 106
	expression  goto 112
	xor_expression  goto 97
	ternaryOperator  goto 98


state 61
	return : RETURN . $$5 expression  (80)
	$$5 : .  (79)

	.  reduce 79

	$$5  goto 113


state 62
	variables : ID .  (8)
	expression : ID .  (111)
	function_call_as_expression : ID . '(' parameters_in_function_call ')'  (118)

	'('  shift 114
	','  reduce 8
	'='  reduce 111
	PLUS_EQUAL  reduce 111
	MINUS_EQUAL  reduce 111
	MUL_EQUAL  reduce 111
	DIV_EQUAL  reduce 111
	MOD_EQUAL  reduce 111
	'?'  reduce 111
	AND  reduce 111
	OR  reduce 111
	XOR  reduce 111
	'>'  reduce 111
	GREATER_OR_EQUAL  reduce 111
	'<'  reduce 111
	LESS_OR_EQUAL  reduce 111
	DISTINCT  reduce 111
	EQUALS  reduce 111
	'+'  reduce 111
	'-'  reduce 111
	'*'  reduce 111
	'/'  reduce 111
	'%'  reduce 111
	PLUS_PLUS  reduce 111
	MINUS_MINUS  reduce 111
	'.'  reduce 111
	'['  reduce 111
	':'  reduce 8


state 63
	do_while : DO . ':' '{' statements '}' WHILE expression  (66)
	do_while : DO . ':' statement WHILE expression  (67)

	':'  shift 115
	.  error


state 64
	for : FOR . '(' for_parenthesis_body ')' ':' '{' statements '}'  (68)
	for : FOR . '(' for_parenthesis_body ')' ':' statement  (69)

	'('  shift 116
	.  error


state 65
	break : BREAK .  (86)

	.  reduce 86


state 66
	expression : '-' . expression  (102)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 100
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	.  error

	assignment_as_expression  goto 101
	function_call_as_expression  goto 102
	pre_plus_plus_as_expression  goto 103
	pre_minus_minus_as_expression  goto 104
	post_plus_plus_as_expression  goto 105
	post_minus_minus_as_expression  goto 106
	expression  goto 117
	xor_expression  goto 97
	ternaryOperator  goto 98


state 67
	expression : '!' . expression  (101)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 100
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	.  error

	assignment_as_expression  goto 101
	function_call_as_expression  goto 102
	pre_plus_plus_as_expression  goto 103
	pre_minus_minus_as_expression  goto 104
	post_plus_plus_as_expression  goto 105
	post_minus_minus_as_expression  goto 106
	expression  goto 118
	xor_expression  goto 97
	ternaryOperator  goto 98


state 68
	pre_plus_plus_as_expression : PLUS_PLUS . expression  (121)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 100
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	.  error

	assignment_as_expression  goto 101
	function_call_as_expression  goto 102
	pre_plus_plus_as_expression  goto 103
	pre_minus_minus_as_expression  goto 104
	post_plus_plus_as_expression  goto 105
	post_minus_minus_as_expression  goto 106
	expression  goto 119
	xor_expression  goto 97
	ternaryOperator  goto 98


state 69
	pre_minus_minus_as_expression : MINUS_MINUS . expression  (122)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 100
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	.  error

	assignment_as_expression  goto 101
	function_call_as_expression  goto 102
	pre_plus_plus_as_expression  goto 103
	pre_minus_minus_as_expression  goto 104
	post_plus_plus_as_expression  goto 105
	post_minus_minus_as_expression  goto 106
	expression  goto 120
	xor_expression  goto 97
	ternaryOperator  goto 98


state 70
	expression : '(' . simple_type ')' expression  (103)
	expression : '(' . expression ')'  (106)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	ID  shift 100
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	.  error

	simple_type  goto 121
	assignment_as_expression  goto 101
	function_call_as_expression  goto 102
	pre_plus_plus_as_expression  goto 103
	pre_minus_minus_as_expression  goto 104
	post_plus_plus_as_expression  goto 105
	post_minus_minus_as_expression  goto 106
	expression  goto 122
	xor_expression  goto 97
	ternaryOperator  goto 98


state 71
	variable_definitions : variable_definition .  (23)

	.  reduce 23


state 72
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body . '}'  (6)

	'}'  shift 123
	.  error


state 73
	function_body : variable_definitions . statements  (20)
	function_body : variable_definitions .  (21)
	variable_definitions : variable_definitions . variable_definition  (24)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 62
	DO  shift 63
	FOR  shift 64
	BREAK  shift 65
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	'}'  reduce 21

	variable_definition  goto 124
	variables  goto 8
	statements  goto 125
	statement  goto 75
	statement_without_semicolon  goto 76
	while  goto 77
	for  goto 78
	if  goto 79
	assignment_as_expression  goto 80
	function_call_as_expression  goto 81
	return  goto 82
	read  goto 83
	write  goto 84
	plus_equal  goto 85
	minus_equal  goto 86
	mul_equal  goto 87
	div_equal  goto 88
	mod_equal  goto 89
	pre_plus_plus_as_expression  goto 90
	pre_minus_minus_as_expression  goto 91
	post_plus_plus_as_expression  goto 92
	post_minus_minus_as_expression  goto 93
	do_while  goto 94
	break  goto 95
	expression  goto 96
	xor_expression  goto 97
	ternaryOperator  goto 98


state 74
	function_body : statements .  (22)
	statements : statements . statement  (26)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 100
	DO  shift 63
	FOR  shift 64
	BREAK  shift 65
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	'}'  reduce 22

	statement  goto 126
	statement_without_semicolon  goto 76
	while  goto 77
	for  goto 78
	if  goto 79
	assignment_as_expression  goto 80
	function_call_as_expression  goto 81
	return  goto 82
	read  goto 83
	write  goto 84
	plus_equal  goto 85
	minus_equal  goto 86
	mul_equal  goto 87
	div_equal  goto 88
	mod_equal  goto 89
	pre_plus_plus_as_expression  goto 90
	pre_minus_minus_as_expression  goto 91
	post_plus_plus_as_expression  goto 92
	post_minus_minus_as_expression  goto 93
	do_while  goto 94
	break  goto 95
	expression  goto 96
	xor_expression  goto 97
	ternaryOperator  goto 98


state 75
	statements : statement .  (25)

	.  reduce 25


state 76
	statement : statement_without_semicolon . ';'  (27)

	';'  shift 127
	.  error


state 77
	statement : while .  (28)

	.  reduce 28


state 78
	statement : for .  (29)

	.  reduce 29


state 79
	statement : if .  (30)

	.  reduce 30


state 80
	statement_without_semicolon : assignment_as_expression .  (31)
	expression : assignment_as_expression .  (117)

	','  reduce 31
	'='  reduce 117
	PLUS_EQUAL  reduce 117
	MINUS_EQUAL  reduce 117
	MUL_EQUAL  reduce 117
	DIV_EQUAL  reduce 117
	MOD_EQUAL  reduce 117
	'?'  reduce 117
	AND  reduce 117
	OR  reduce 117
	XOR  reduce 117
	'>'  reduce 117
	GREATER_OR_EQUAL  reduce 117
	'<'  reduce 117
	LESS_OR_EQUAL  reduce 117
	DISTINCT  reduce 117
	EQUALS  reduce 117
	'+'  reduce 117
	'-'  reduce 117
	'*'  reduce 117
	'/'  reduce 117
	'%'  reduce 117
	PLUS_PLUS  reduce 117
	MINUS_MINUS  reduce 117
	'.'  reduce 117
	'['  reduce 117
	')'  reduce 31
	';'  reduce 31


state 81
	statement_without_semicolon : function_call_as_expression .  (32)
	expression : function_call_as_expression .  (107)

	','  reduce 32
	'='  reduce 107
	PLUS_EQUAL  reduce 107
	MINUS_EQUAL  reduce 107
	MUL_EQUAL  reduce 107
	DIV_EQUAL  reduce 107
	MOD_EQUAL  reduce 107
	'?'  reduce 107
	AND  reduce 107
	OR  reduce 107
	XOR  reduce 107
	'>'  reduce 107
	GREATER_OR_EQUAL  reduce 107
	'<'  reduce 107
	LESS_OR_EQUAL  reduce 107
	DISTINCT  reduce 107
	EQUALS  reduce 107
	'+'  reduce 107
	'-'  reduce 107
	'*'  reduce 107
	'/'  reduce 107
	'%'  reduce 107
	PLUS_PLUS  reduce 107
	MINUS_MINUS  reduce 107
	'.'  reduce 107
	'['  reduce 107
	')'  reduce 32
	';'  reduce 32


state 82
	statement_without_semicolon : return .  (33)

	.  reduce 33


state 83
	statement_without_semicolon : read .  (34)

	.  reduce 34


state 84
	statement_without_semicolon : write .  (35)

	.  reduce 35


state 85
	statement_without_semicolon : plus_equal .  (36)

	.  reduce 36


state 86
	statement_without_semicolon : minus_equal .  (37)

	.  reduce 37


state 87
	statement_without_semicolon : mul_equal .  (38)

	.  reduce 38


state 88
	statement_without_semicolon : div_equal .  (39)

	.  reduce 39


state 89
	statement_without_semicolon : mod_equal .  (40)

	.  reduce 40


state 90
	statement_without_semicolon : pre_plus_plus_as_expression .  (41)
	expression : pre_plus_plus_as_expression .  (112)

	','  reduce 41
	'='  reduce 112
	PLUS_EQUAL  reduce 112
	MINUS_EQUAL  reduce 112
	MUL_EQUAL  reduce 112
	DIV_EQUAL  reduce 112
	MOD_EQUAL  reduce 112
	'?'  reduce 112
	AND  reduce 112
	OR  reduce 112
	XOR  reduce 112
	'>'  reduce 112
	GREATER_OR_EQUAL  reduce 112
	'<'  reduce 112
	LESS_OR_EQUAL  reduce 112
	DISTINCT  reduce 112
	EQUALS  reduce 112
	'+'  reduce 112
	'-'  reduce 112
	'*'  reduce 112
	'/'  reduce 112
	'%'  reduce 112
	PLUS_PLUS  reduce 112
	MINUS_MINUS  reduce 112
	'.'  reduce 112
	'['  reduce 112
	')'  reduce 41
	';'  reduce 41


state 91
	statement_without_semicolon : pre_minus_minus_as_expression .  (42)
	expression : pre_minus_minus_as_expression .  (113)

	','  reduce 42
	'='  reduce 113
	PLUS_EQUAL  reduce 113
	MINUS_EQUAL  reduce 113
	MUL_EQUAL  reduce 113
	DIV_EQUAL  reduce 113
	MOD_EQUAL  reduce 113
	'?'  reduce 113
	AND  reduce 113
	OR  reduce 113
	XOR  reduce 113
	'>'  reduce 113
	GREATER_OR_EQUAL  reduce 113
	'<'  reduce 113
	LESS_OR_EQUAL  reduce 113
	DISTINCT  reduce 113
	EQUALS  reduce 113
	'+'  reduce 113
	'-'  reduce 113
	'*'  reduce 113
	'/'  reduce 113
	'%'  reduce 113
	PLUS_PLUS  reduce 113
	MINUS_MINUS  reduce 113
	'.'  reduce 113
	'['  reduce 113
	')'  reduce 42
	';'  reduce 42


state 92
	statement_without_semicolon : post_plus_plus_as_expression .  (43)
	expression : post_plus_plus_as_expression .  (114)

	','  reduce 43
	'='  reduce 114
	PLUS_EQUAL  reduce 114
	MINUS_EQUAL  reduce 114
	MUL_EQUAL  reduce 114
	DIV_EQUAL  reduce 114
	MOD_EQUAL  reduce 114
	'?'  reduce 114
	AND  reduce 114
	OR  reduce 114
	XOR  reduce 114
	'>'  reduce 114
	GREATER_OR_EQUAL  reduce 114
	'<'  reduce 114
	LESS_OR_EQUAL  reduce 114
	DISTINCT  reduce 114
	EQUALS  reduce 114
	'+'  reduce 114
	'-'  reduce 114
	'*'  reduce 114
	'/'  reduce 114
	'%'  reduce 114
	PLUS_PLUS  reduce 114
	MINUS_MINUS  reduce 114
	'.'  reduce 114
	'['  reduce 114
	')'  reduce 43
	';'  reduce 43


state 93
	statement_without_semicolon : post_minus_minus_as_expression .  (44)
	expression : post_minus_minus_as_expression .  (115)

	','  reduce 44
	'='  reduce 115
	PLUS_EQUAL  reduce 115
	MINUS_EQUAL  reduce 115
	MUL_EQUAL  reduce 115
	DIV_EQUAL  reduce 115
	MOD_EQUAL  reduce 115
	'?'  reduce 115
	AND  reduce 115
	OR  reduce 115
	XOR  reduce 115
	'>'  reduce 115
	GREATER_OR_EQUAL  reduce 115
	'<'  reduce 115
	LESS_OR_EQUAL  reduce 115
	DISTINCT  reduce 115
	EQUALS  reduce 115
	'+'  reduce 115
	'-'  reduce 115
	'*'  reduce 115
	'/'  reduce 115
	'%'  reduce 115
	PLUS_PLUS  reduce 115
	MINUS_MINUS  reduce 115
	'.'  reduce 115
	'['  reduce 115
	')'  reduce 44
	';'  reduce 44


state 94
	statement_without_semicolon : do_while .  (45)

	.  reduce 45


state 95
	statement_without_semicolon : break .  (46)

	.  reduce 46


state 96
	plus_equal : expression . PLUS_EQUAL expression  (81)
	minus_equal : expression . MINUS_EQUAL expression  (82)
	mul_equal : expression . MUL_EQUAL expression  (83)
	div_equal : expression . DIV_EQUAL expression  (84)
	mod_equal : expression . MOD_EQUAL expression  (85)
	expression : expression . AND expression  (87)
	expression : expression . OR expression  (88)
	expression : expression . '>' expression  (90)
	expression : expression . GREATER_OR_EQUAL expression  (91)
	expression : expression . '<' expression  (92)
	expression : expression . LESS_OR_EQUAL expression  (93)
	expression : expression . DISTINCT expression  (94)
	expression : expression . EQUALS expression  (95)
	expression : expression . '+' expression  (96)
	expression : expression . '-' expression  (97)
	expression : expression . '*' expression  (98)
	expression : expression . '/' expression  (99)
	expression : expression . '%' expression  (100)
	expression : expression . '.' ID  (104)
	expression : expression . '[' expression ']'  (105)
	post_plus_plus_as_expression : expression . PLUS_PLUS  (123)
	post_minus_minus_as_expression : expression . MINUS_MINUS  (124)
	ternaryOperator : expression . '?' expression ':' expression  (125)
	assignment_as_expression : expression . '=' expression  (126)
	xor_expression : expression . XOR expression  (127)

	'='  shift 128
	PLUS_EQUAL  shift 129
	MINUS_EQUAL  shift 130
	MUL_EQUAL  shift 131
	DIV_EQUAL  shift 132
	MOD_EQUAL  shift 133
	'?'  shift 134
	AND  shift 135
	OR  shift 136
	XOR  shift 137
	'>'  shift 138
	GREATER_OR_EQUAL  shift 139
	'<'  shift 140
	LESS_OR_EQUAL  shift 141
	DISTINCT  shift 142
	EQUALS  shift 143
	'+'  shift 144
	'-'  shift 145
	'*'  shift 146
	'/'  shift 147
	'%'  shift 148
	PLUS_PLUS  shift 149
	MINUS_MINUS  shift 150
	'.'  shift 151
	'['  shift 152
	.  error


state 97
	expression : xor_expression .  (89)

	.  reduce 89


state 98
	expression : ternaryOperator .  (116)

	.  reduce 116


state 99
	function_definition : DEF $$2 ID '(' parameters ')' ':' return_type '{' . function_body '}'  (11)
	function_body : .  (19)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 62
	DO  shift 63
	FOR  shift 64
	BREAK  shift 65
	'-'  shift 66
	'!'  shift 67
	PLUS_PLUS  shift 68
	MINUS_MINUS  shift 69
	'('  shift 70
	'}'  reduce 19

	variable_definition  goto 71
	function_body  goto 153
	variables  goto 8
	variable_definitions  goto 73
	statements  goto 74
	statement  goto 75
	statement_without_semicolon  goto 76
	while  goto 77
	for  goto 78
	if  goto 79
	assignment_as_expression  goto 80
	function_call_as_expression  goto 81
	return  goto 82
	read  goto 83
	write  goto 84
	plus_equal  goto 85
	minus_equal  goto 86
	mul_equal  goto 87
	div_equal  goto 88
	mod_equal  goto 89
	pre_plus_plus_as_expression  goto 90
	pre_minus_minus_as_expression  goto 91
	post_plus_plus_as_expression  goto 92
	post_minus_minus_as_expression  goto 93
	do_while  goto 94
	break  goto 95
	expression  goto 96
	xor_expression  goto 97
	ternaryOperator  goto 98

